# traisformer-seaseeai

./: .gitignore  .~lock.AIS_2024_12_311.csv#  AIS_data_sampled.csv  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_STRUCTURE_GUIDE.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  meeting_status.txt  mentor_meeting_summary.md  model_evaluation_report.txt  pyproject.toml  reduce_data.py  render.yaml  requirements-build.txt  requirements-minimal.txt  requirements.txt  requirements_simple.txt  simple_api.py  simple_dashboard.py  simple_demo.py  start_production.sh  start_simple_system.sh  test_all_datasets.py
archived/: README.md  simple_dashboard.py
archived/2025_10_15_cleanup/: MENTOR_PRESENTATION.md  simple_dashboard_fixed.py  test_ais_predictions.py  test_fixes.py  test_model_fix.py
config/: production.yaml
data/: README.md
docs/: README.md  project-plan.md
monitoring/: prometheus.yml
notebooks/: 01_project_setup_test.ipynb  05_mentor_demo_final.ipynb
scripts/: deploy_production.sh  start_production.py
src/analysis/: diagnose_data.py
src/api/: fastapi_server.py  fastapi_server_fixed.py
src/dashboard/: streamlit_app.py
src/data_processing/: advanced_preprocessor.py  ais_data_loader.py  preprocessor.py  quick_real_data_analyzer.py  real_data_processor.py  sample_data_generator.py
src/evaluation/: evaluate_model.py  evaluate_real_data.py  evaluate_real_data_fixed.py  evaluate_real_data_simple.py  evaluate_working_model.py  model_evaluator.py
src/inference/: real_time_predictor.py
src/training/: compare_models.py  (+10 more)
(+4 files in other folders)
