[build-system]
requires = ["setuptools>=65.5.0", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "seaseeai"
version = "0.1.0"
description = "SeaSeeAI - Vessel Trajectory Prediction"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "pandas>=1.5.3",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "numpy>=1.24.3"
]